--- a/memory.css
+++ b/memory.css
@@ -43,3 +43,21 @@ body{
     flex-direction: column;
     flex-wrap: wrap;
 }
+@media (max-width: 537px) {
+
+    .col{
+        width: 50px;
+        height: 50px;
+        border: 0.5rem solid white;
+    }
+    .rows{
+        display: flex;
+        flex-direction: column;
+    }
+    .grid{
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+    }
+}
+
